# ComplAInce

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  gen.py  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/actions/check-code-quality/: action.yml
.github/workflows/: checks-pr-to-master.yml
changelog/: index.html
complaince/: __init__.py  logging.conf.yml
complaince/core/: agent.py  agent_tools.py  fetch_github.py  monitoring.py
complaince/exposition/: complaince_api.py
complaince/schemas/: exposition_models.py
complaince/tools/: cartography_api.py  cartography_history.py  cartography_repository.py
config/: pre-commit-hook-template
config/packaging/: mkdocs.yml  setup.cfg
config/pre-commit/: .pre-commit-config.yaml  config.toml  setup.cfg
config/tests/: setup.cfg
contributing/: index.html
data/fake_repo/: fastapi_web_app.py  flask_web_app.py
data/prompts/: example_1.txt
docker/: Dockerfile  docker.sh
docs/: changelog.md  contributing.md  gen.py  index.md
references/SUMMARY/: index.html
references/tools/cartography_api/: index.html
references/tools/cartography_history/: index.html
references/tools/cartography_repository/: index.html
report/: synthesis_report.qmd
search/: search_index.json
tests/: __init__.py
tests/unitary/: test_cartography_api.py  test_cartography_history.py  test_cartography_repository.py
