[project]
name = "ComplAInce"
version = "1.0.0"
homepage = "https://github.com/alexym1/ComplAInce"
description = "Provide a faster way to comply with AI Act"
authors = [{ name = "Astral Software Inc.", email = "hey@astral.sh" }]
requires-python = ">=3.10,<4.0"
keywords = [
  "uv", "requirements", "packaging"
]
readme = "README.md"
classifiers=[
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
    { include = "complaince"},
    { include = "tests", format = "sdist" },
]

dependencies = [
    "gitpython==3.1.44",
    "matplotlib==3.10.1",
    "pandas==2.2.3",
    "pygithub==2.6.1",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
typing = [
    "types-requests",
    "mypy",
    "types-pyyaml",
    "typing_extensions",
    "pandas-stubs",
]

test = [
    "pytest",
    "pytest-cov",
    ]

dev = [
    "bump2version"
    ]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extensions",
    "pytkdocs",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "jinja2",
    "MarkupSafe"
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
